Bug 399122 - Duplicate entries are not all deleted from TM on request
Summary: Duplicate entries are not all deleted from TM on request
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: translation memory (other bugs)
Version First Reported In: 2.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-26 23:17 UTC by Alexander Potashev
Modified: 2018-10-04 05:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2018-09-26 23:17:37 UTC
SUMMARY
Duplicate entries are not all deleted from translation memory (TM) on request.

STEPS TO REPRODUCE
1. Feed translation memory with several similar .po files that have identical translations for some strings.
2. Open a .po file with such a string having duplicate translations in TM.
3. Find the duplicated translation in the Translation Memory dock and click Remove this Segment from TM from the context menu.

OBSERVED RESULT
The translation variant is still visible in the TM dock.

EXPECTED RESULT
The translation variant should be deleted and vanish from the TM dock.

SOFTWARE VERSIONS
lokalize-18.04.3-1.fc28.x86_64
Comment 1 Simon Depiets 2018-10-04 05:01:23 UTC
Git commit 2bdf240c0d2b1e5d0f89fb3bbc4fdf24b2843882 by Simon Depiets.
Committed on 04/10/2018 at 04:59.
Pushed by sdepiets into branch 'master'.

Remove duplicated entries from the TM too

M  +23   -20   src/tm/jobs.cpp

https://commits.kde.org/lokalize/2bdf240c0d2b1e5d0f89fb3bbc4fdf24b2843882