Remove duplicated entries from the TM too

BUG: 399122